test_regress/t/t_vpi_var_bad2.v
module t();
    reg x;
/* verilator public_off */
endmodule
